# maliang

./: .gitignore  AI体验设计文档_马良神记.md  AI改造机会_马良神记.md  README.md  dark mode.tokens.json  light mode.tokens.json  pubspec.yaml  核心流程说明_马良神记.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: bill_category.dart  collection_item.dart  memory_item.dart
lib/pages/: about_page.dart  ai_model_settings_page.dart  backup_import_page.dart  backup_settings_page.dart  bill_summary_page.dart  collection_detail_page.dart  image_viewer_page.dart  mcp_settings_page.dart  memory_detail_page.dart  settings_page.dart  wardrobe_page.dart
lib/services/: ai_service.dart  collection_service.dart  config_service.dart  image_cache_service.dart  mcp_server_service.dart  memory_service.dart  notification_service.dart  weather_service.dart
lib/theme/: app_colors.dart
lib/utils/: scroll_edge_haptic.dart  smooth_radius.dart
lib/widgets/: add_collection_card.dart  ai_chat_sheet.dart  ai_glow_border.dart  bill_card.dart  clothing_card.dart  collection_card.dart  collection_section.dart  create_collection_sheet.dart  glass_button.dart  main_app_bar.dart  memory_list_item.dart  responsive_layout.dart  skeleton_list_item.dart  swipeable_memory_item.dart
linux/: CMakeLists.txt
mcp_server/: README.md  maliang_mcp_server.py  pyproject.toml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+23 files in other folders)
